Aggiungo il work flow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 			<h1>Collegamenti esercizi</h1>
 			<p>
-				<a href="menù.html">menù</a>
+				<a href="menu.html">menù</a>
 			</p>
 	</body>
 	</html>
