corretti gli errori

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<doctype html>
+<!doctype html>
 <html lang="it">
-    <body>
-	<head>
+    <head>
 	    <meta charset="utf-8">
 	    <meta name="ciewport" content="width=device-width, initial-scale=1">
 	    <title> Collegamenti </title>
 	</head>
+	<body>
 			<h1>Collegamenti esercizi</h1>
 			<p>
 				<a href="menu.html">menù</a>
 			</p>
 	</body>
-	</html>
+</html>
