corretti gli errori

--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,12 @@
-<doctype html>
+<!doctype html>
 <html lang="it">
-    <body>
+    
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="ciewport" content="width=device-width, initial-scale=1">
 	    <title> Menù esercizi </title>
 	</head>
+	<body>
 			<h1>Menù</h1>
 		<p>
 			<a href="attori.html">Attori</a>
