corretti gli errori

--- a/attori.html
+++ b/attori.html
@@ -42,7 +42,7 @@
 		   Asuna Yuuki alias "La saetta" è un personaggio immaginario delle serie di romanzi "Sword Art Online" scritti da Reki Kawahara. Asuna Yuuki appare
 		   come la ragazza di kirito (il protagnista della serie) ed è vice comandante della gilda dei "cavalieri del giuramento di sangue". Asuna inizialmente 
 		   non doveva entrare nel mondo virtuale di SAO, ma a causa di un imprevisto al fratello, lei entrò al posto suo. Asuna viene raffigurata come una giocatrice abile 
-		   ed è stata soprannominata "La saetta" proprio per la sua velocità, che supera quella del protagonista. Asuna è diventata così famosa, che ha guadagnato un 
+		   ed è stata soprannominata "La saetta" proprio per la sua velocità, che supera quella del protagonista. asuna è diventata così famosa, che ha guadagnato un 
 		   reboot di Aincrad con lei protagonista.
 		</p>
 		
