--- a/angoli.html
+++ b/angoli.html
@@ -8,7 +8,7 @@
         <!--Metadati di angoli.js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
         <style>
-            html, body { margin: 0; padding: 0; background-color: "red"}
+            html, body { margin: 0; padding: 0;}
             canvas { display: block; }
         </style>
     </head>
