--- a/formazione.html
+++ b/formazione.html
@@ -1,5 +1,10 @@
 <!doctype html>
     <html>
+	<head>
+	    <meta charset= "utf-8">
+        <meta name="viewpart" content="width=device-width, initial-scale=1">
+        <title>Esercizio </title>
+	</head>
         <body>
 		    <h1> FORMAZIONE SAMPDORIA </h1>
 	    <p>
