aggiunta pagina web

--- a/menu.html
+++ b/menu.html
@@ -7,15 +7,21 @@
 	    <title> Menù esercizi </title>
 	</head>
 	<body>
-			<h1>Menù</h1>
-		<p>
-			<a href="attori.html">Attori</a>
-		</p>
-		<p>
-			<a href="formazione.html">Fomazione Squadra</a>
-		</p>
-		<p>
-		   <a href="angoli.html">Angoli</a>
-		</p>
-	</body>
+				<h1>Menù</h1>
+			<p>
+				<a href="attori.html">Attori</a>
+			</p>
+			<p>
+				<a href="formazione.html">Fomazione Squadra</a>
+			</p>
+			<p>
+				<a href="angoli.html">Angoli</a>
+			</p>
+			<p>
+				<a href="cicli.html">Cicli</a>
+			</p>
+			<p>
+				<a href="acchiappapalline.html">Acchiappapalline</a>
+			</p>
+	</body>	
 	</html>
